# libsdlerror

./: CMakeLists.txt  Makefile  README.md  sdlerror.pc.in
cmake/: sdlerror.cmake.in
include/: error.h  sdlerror.h
src/: error.c
tests/: err_catch.c  err_cleanup.c  err_trace.c
